tests/negative/test_expr_eval_div_by_zero_signed.orb
fnc main () () {
    sym (x (/ 1 0));
};